# peregrine

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile.bootstrap  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  checkasm  meson.build  meson_options.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
doc/: benchmarking-plan.md  writing-asm.md
include/peregrine/: llama.h  model.h  peregrine.h  tokenizer.h  version.h
src/: config.asm  config.h
src/cli/: peregrine.c
src/ext/: README.md
src/model/: model_file.c
src/runtime/: llama.c
src/tensor/kernels/add/: add.h  add_init.c  add_ref.c
src/tensor/kernels/add/arm/: add_neon.S
src/tensor/kernels/add/x86/: add_avx2.asm
src/tensor/kernels/axpy/: axpy.h  axpy_init.c  axpy_ref.c
src/tensor/kernels/axpy/arm/: axpy_neon.S
src/tensor/kernels/axpy/x86/: axpy_avx2.asm
src/tensor/kernels/dot/: dot.h  dot_init.c  dot_ref.c
src/tensor/kernels/dot/arm/: dot_neon.S
src/tensor/kernels/dot/x86/: dot_avx2.asm
src/tensor/kernels/exp/: exp.h  exp_init.c  exp_ref.c
src/tensor/kernels/exp/arm/: exp_neon.S
src/tensor/kernels/exp/x86/: exp_avx2.asm
src/tensor/kernels/fp16/: fp16.h  fp16_init.c  fp16_ref.c
src/tensor/kernels/fp16/arm/: fp16_convert_neon.S
src/tensor/kernels/gelu/: gelu.h  gelu_init.c  gelu_ref.c
src/tensor/kernels/gelu/arm/: gelu_neon.S
src/tensor/kernels/gelu/x86/: gelu_avx2.asm
src/tensor/kernels/gemm/: gemm.h  gemm_avx2.c  gemm_bf16.c  gemm_bf16.h  gemm_bf16_avx2.c  gemm_bf16_avx512bf16.c  gemm_bf16_init.c  gemm_bf16_mmla.c  gemm_bf16_neon.c  gemm_blocked.c  gemm_fp16.c  gemm_fp16.h  gemm_fp16_avx2.c  gemm_fp16_f16.c  gemm_fp16_init.c  gemm_fp16_neon.c  gemm_init.c  gemm_neon.c  gemm_ref.c
src/tensor/kernels/gemm/arm/: bf16gemm_ukernel_neon.S  fp16gemm_ukernel_neon.S  sgemm_ukernel_neon.S
src/tensor/kernels/gemm/x86/: bf16gemm_ukernel_avx512bf16.asm  sgemm_ukernel_avx2.asm
src/tensor/kernels/gemv/: gemv.h  gemv_avx2.c  gemv_driver.c  gemv_init.c  gemv_neon.c  gemv_ref.c
src/tensor/kernels/max/: max.h  max_init.c  max_ref.c
src/tensor/kernels/max/arm/: max_neon.S
src/tensor/kernels/max/x86/: max_avx2.asm
src/tensor/kernels/mul/: mul.h  mul_init.c  mul_ref.c
src/tensor/kernels/mul/arm/: mul_neon.S
src/tensor/kernels/mul/x86/: mul_avx2.asm
src/tensor/kernels/qgemv/: qgemv.h  qgemv_driver.c  qgemv_init.c  qgemv_neon.c  qgemv_ref.c
src/tensor/kernels/qgemv/arm/: q8_0_dot_neon.S  q8_0_gemv_neon.S
src/tensor/kernels/rmsnorm/: rmsnorm.h  rmsnorm_init.c  rmsnorm_ref.c
src/tensor/kernels/rmsnorm/arm/: rmsnorm_neon.S
src/tensor/kernels/rmsnorm/x86/: rmsnorm_avx2.asm
src/tensor/kernels/rope/: rope.h  rope_init.c  rope_ref.c
src/tensor/kernels/rope/arm/: rope_neon.S
src/tensor/kernels/rope/x86/: rope_avx2.asm
src/tensor/kernels/silu/: silu.h  silu_init.c  silu_ref.c
src/tensor/kernels/silu/arm/: silu_neon.S
src/tensor/kernels/silu/x86/: silu_avx2.asm
src/tensor/kernels/simd/: exp_avx2.inc  exp_neon.h
src/tensor/kernels/softmax/: softmax.h  softmax_init.c  softmax_ref.c
src/tensor/kernels/softmax/arm/: softmax_neon.S
src/tensor/kernels/softmax/x86/: softmax_avx2.asm
src/tensor/kernels/sum/: sum.h  sum_init.c  sum_ref.c
src/tensor/kernels/sum/arm/: sum_neon.S
src/tensor/kernels/sum/x86/: sum_avx2.asm
src/token/: tokenizer.c
src/util/: arch.h  cpu.c  cpu.h  filemap.c  filemap.h  mem.c  mem.h  thread.c  thread.h
tests/: meson.build  test_llama.c  test_llama_cpp_parity.py  test_model_file.c  test_tokenizer.c
tests/checkasm/: checkasm.c  checkasm.h  checkasm_add.c  checkasm_axpy.c  checkasm_dot.c  checkasm_exp.c  checkasm_fp16.c  checkasm_gelu.c  checkasm_gemm.c  checkasm_gemm_bf16.c  checkasm_gemm_fp16.c  checkasm_gemv.c  checkasm_max.c  checkasm_mul.c  checkasm_qgemv.c  checkasm_rmsnorm.c  checkasm_rope.c  checkasm_silu.c  checkasm_softmax.c  checkasm_sum.c
tests/checkasm/arm/: checkasm.S
tests/checkasm/x86/: checkasm.asm
tools/: llama_cpp_parity.py
